workshop03/bgg-db.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: bggdb-deploy
  name: bggdb-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bggdb
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: bggdb
    spec:
      volumes:
      - name: bggdb-vol
        persistentVolumeClaim:
          claimName: nwdb-pvc
      containers:
      - image: stackupiss/bgg-database:v1
        name: bggdb-container
        resources: {}
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: bggdb-vol
          mountPath: /var/lib/mysql
status: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: bggdb-svc
  name: bggdb-svc
spec:
  ports:
  - port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    app: bggdb
  type: ClusterIP
status:
  loadBalancer: {}
---
