workshop03/bgg-ingress.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: default-backend-deploy
  name: default-backend-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: default-backend-pod
  template:
    metadata:
      labels:
        app: default-backend-pod
    spec:
      containers:
      - image: stackupiss/default-backend:v2
        name: default-backend-pod
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: default-backend-svc
  name: default-backend-svc
spec:
  selector:
    app: default-backend-pod
  type: ClusterIP
  ports:
  - name: 3000-3000
    port: 3000
    protocol: TCP
    targetPort: 3000
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bgg-ing
  labels:
    name: bgg-ing
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: default-backend-svc
      port:
        number: 3000
  rules:
  - host: bgg-157.230.194.30.nip.io
    http:
      paths:
      - path: /v1
        pathType: Prefix
        backend: 
          service:
            name: bggappv1-svc
            port: 
              number: 80
      - path: /v2
        pathType: Prefix
        backend: 
          service:
            name: bggappv2-svc
            port: 
              number: 80
---
